Add backends, add documentation, update reflection, update poms
* Add backends: Use SnakeYaml Engine, Hocon, JToml.
* Fix a critical design flaw: path of subsection is not static.
  So, include the path (for debugging purposes) of a loaded
  configuration in the read options.
* Also, solve the conundrum of having to transmit settings from
  parent to child ReadOptions, by making DeserializeContext
  implement it.
* Add lots more documentation including on migrating.
* Update poms and publishing details
* Update reflection APIs and allow providing a Lookup for the
  purpose of privileged reflective access.
* Better toString() output for DataEntry and DataTree
* Make YAML backend read events, enabling it to be more efficient
  and precise. Temporarily patch SnakeYaml's Emitter to account for
  comments on empty strings in a list.
* Add JPMS integration test to yaml module