@@ -1,19 +1,19 @@
-/* 
- * DazzleConf-core
- * Copyright © 2020 Anand Beh <https://www.arim.space>
- * 
- * DazzleConf-core is free software: you can redistribute it and/or modify
+/*
+ * DazzleConf
+ * Copyright © 2025 Anand Beh
+ *
+ * DazzleConf is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Lesser General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
- * 
- * DazzleConf-core is distributed in the hope that it will be useful,
+ *
+ * DazzleConf is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  * GNU Lesser General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU Lesser General Public License
- * along with DazzleConf-core. If not, see <https://www.gnu.org/licenses/>
+ * along with DazzleConf. If not, see <https://www.gnu.org/licenses/>
  * and navigate to version 3 of the GNU Lesser General Public License.
  */
 package space.arim.dazzleconf;
@@ -23,7 +23,8 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -51,10 +52,10 @@ public class V1DummyConfigDefaults {
 		assertEquals("no need to create an entirely new interface for a small subsection", defaultConf.simpleSubsection());
 		assertEquals("did not see that coming", defaultConf.combinedSubsection());
 		try {
-			assertEquals(new URL("https://google.com"), defaultConf.someUrl());
-		} catch (MalformedURLException ex) {
+			assertEquals(new URI("https://google.com").toURL(), defaultConf.someUrl());
+		} catch (MalformedURLException | URISyntaxException ex) {
 			fail(ex);
-		}
+        }
 		assertEquals(Map.of(V1ValueEnum.ANOTHER, "value", V1ValueEnum.THIRD, "more"), defaultConf.enumMap());
 		assertEquals(Set.of("string1", "string2"), defaultConf.someStrings());
 
